--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm">
+<form [formGroup]="registerForm" (ngSubmit)="submitDetails()">
     <p-card header="Register" [style]="{width: '360px'}">
         <div class="field">
             <label for="fullName">Full Name</label>
@@ -10,7 +10,7 @@
         </div>
         <div class="field">
             <label for="email">Email</label>
-            <input type="text" pInputText formControlName="email" class="w-full" name="email" placeholder="Enter your email"/>
+            <input type="text" pInputText formControlName="email" class="w-full" name="email" placeholder="Enter your Email"/>
             <small *ngIf="email.invalid && (email.dirty || email.touched)" class="block p-error">
                 <div *ngIf="email.errors?.['required']">Email is required.</div>
                 <div *ngIf="email.errors?.['email']">Email should be valid.</div>
@@ -25,7 +25,7 @@
         </div>
         <div class="field">
             <label for="confirmPassword" class="mt-3">Confirm Password</label>
-            <input type="confirmPassword" pInputText formControlName="confirmPassword" class="w-full" name="confirmPassword" placeholder="Confirm the password"/>
+            <input type="password" pInputText formControlName="confirmPassword" class="w-full" name="confirmPassword" placeholder="Confirm the password"/>
             <small *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)" class="block p-error">
                 <div *ngIf="confirmPassword.errors?.['required']">Confirm Password.</div>
             </small>
@@ -33,7 +33,8 @@
                 Passwords do not match
             </small>
         </div>
-        <p-button label="Register" styleClass="w-full" [disabled]="registerForm.invalid"></p-button>
+        <p-button label="Register" styleClass="w-full" [disabled]="registerForm.invalid" type="submit"></p-button>
+        <p-toast></p-toast>
         <div class="mt-3"> Already a member? <a routerLink="/login" routerLinkActive="active">Login</a></div>
     </p-card>
 </form>
