--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm">
+<form [formGroup]="loginForm" (ngSubmit)="loginUser()">
     <p-card header="Login" [style]="{width: '360px'}">
         <div class="field">
             <label for="email">Email</label>
@@ -13,7 +13,8 @@
                 <div *ngIf="password.errors?.['required']">Password is required.</div>
             </small>
         </div>
-        <p-button label="SIGN IN" styleClass="w-full" [disabled]="loginForm.invalid"></p-button>
+        <p-button label="SIGN IN" styleClass="w-full" [disabled]="loginForm.invalid" type="submit"></p-button>
+        <p-toast></p-toast>
         <div class="mt-3"> Don't have an account? <a routerLink="/register" routerLinkActive="active">Register</a></div>
     </p-card>
 </form>
